<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blue Printer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="files_name">Files</string>
    <string name="jobs_name">Jobs</string>
    <string name="usage_name">Usage</string>
    <string name="savedFilesCat">Saved Files</string>
    <string name="connServCat">Connected Services</string>
    <string name="inactServCat">Inactive Services</string>
    <string name="tapToConn">Tap to connect</string>
    <string name="title_activity_print">Print Options</string>
    <string name="selectPrinter">Choose a printer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ppsopt">Pages per sheet</string>
    <string name="duplexOpt">Duplex</string>

    <string-array name="pps_choices">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>9</item>
        <item>16</item>
    </string-array>
    <string-array name="duplex_choices">
        <item>Single-sided</item>
        <item>Double-sided long edge</item>
        <item>Double-sided short edge</item>
    </string-array>

    <string name="title_activity_select_printer">Select Printer</string>

</resources>
